@@ -16,6 +16,7 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -25,7 +26,7 @@ import java.util.stream.Collectors;
 @Slf4j
 public class AmeldingService {
 
-    private static final String STATUS_ELEMENT = "%s: arbforhold=1$%s";
+    private static final String STATUS_ELEMENT = "%s:Amelding$%s";
 
     private final AmeldingConsumer ameldingConsumer;
     private final MapperFacade mapperFacade;
@@ -34,7 +35,7 @@ public class AmeldingService {
     public Mono<String> sendAmelding(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson,
                                      Set<String> miljoer) {
 
-        var orgnumre = bestilling.getAareg().get(0).getAmelding().stream()
+        var orgnumre = bestilling.getAareg().getFirst().getAmelding().stream()
                 .map(RsAmeldingRequest::getArbeidsforhold)
                 .flatMap(Collection::stream)
                 .map(RsArbeidsforholdAareg::getArbeidsgiver)
@@ -46,14 +47,15 @@ public class AmeldingService {
                         .filter(OrganisasjonDTO::isFunnet)
                         .collect(Collectors.toMap(OrganisasjonDTO::getOrgnummer, OrganisasjonDTO::getJuridiskEnhet))
                         .flatMapMany(organisasjon ->
-                                prepareAmeldinger(bestilling.getAareg().get(0), dollyPerson.getIdent(),
+                                prepareAmeldinger(bestilling.getAareg().getFirst(), dollyPerson.getIdent(),
                                         organisasjon, miljoe))
                         .collect(Collectors.joining(",")))
                 .flatMap(Flux::from)
                 .collect(Collectors.joining(","));
     }
 
-    private Flux<String> prepareAmeldinger(RsAareg aareg, String ident, Map<String, String> organisasjon, String miljoe) {
+    private Flux<String> prepareAmeldinger(RsAareg aareg, String ident, Map<String, String> organisasjon,
+                                           String miljoe) {
 
         var context = new MappingContext.Factory().getContext();
         context.setProperty("personIdent", ident);
@@ -62,9 +64,10 @@ public class AmeldingService {
 
         return Flux.fromIterable(aareg.getAmelding())
                 .map(aamelding -> mapperFacade.map(aamelding, AMeldingDTO.class, context))
+                .sort(Comparator.comparing(AMeldingDTO::getKalendermaaned))
                 .collectList()
-                .flatMapMany(reultat -> ameldingConsumer.sendAmeldinger(reultat, miljoe)
+                .flatMapMany(ameldinger -> ameldingConsumer.sendAmeldinger(ameldinger, miljoe)
                         .distinct()
-                        .map(status -> String.format(STATUS_ELEMENT, miljoe, status)));
+                        .map(status -> STATUS_ELEMENT.formatted(miljoe, status)));
     }
 }
